Se solucionaron problemas con los archivos hadoop-env.sh